2013-10-09  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkTriRasterization.cpp: (0.1.1)

	- Minor, remove unused variables.

	* Add matlab/CgalToolbox/PolyhedronBuilder.h: (0.1.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.16)
	* matlab/CgalToolbox/CgalSurfaceSubdivision.cpp: (0.1.1)

	- Move class PolyhedronBuilder out of CgalSurfaceSubdivision.cpp
	into its own new file PolyhedronBuilder.h. This way we can reuse
	it in other cgal MEX Matlab functions.

2013-10-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.4.0)

	- Add input argument "options" for 'fastmarching' method, so that
	we can pass a local neighbourhood radius for every voxel in
	OPTIONS.constraint_map.

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.4.2)

	- The alpha shape function returns a surface mesh where lots of
	the vertices are not used. We now "squeeze" the list of vertices
	to leave only those that belong to the surface.

2013-10-04  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.4.1)

	- Give the alpha shape mesh computed internally as an output
	(given as TRI, X).

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.4.0)

	- Speed up function from ~20 min to ~30 sec for a high res left
	ventricle of rat 008.

	- We use itk_tri_rasterization() instead of cgal_insurftri() to
	rasterize the inside of the mesh. This is much faster, although
	sometimes a few voxels can be mislabelled. To avoid it, we make an
	auxiliary duplicate of the rasterization, dilate by 1, and then
	find voxels in the dilated but not in the original
	rasterization. These voxels are candidates to be artifacts, and we
	process them with cgal_insurftri(), slower but more accurate.

	* Add matlab/ItkToolbox/ItkTriRasterization.cpp: (0.1.0)
	* Add matlab/test/test_itk_tri_rasterization.m: (0.1.0)
	* Add matlab/ItkToolbox/itk_tri_rasterization.m: (0.1.0)
	* matlab/ItkToolbox/CMakeLists.txt: (0.6.8)
